--- a/index.html
+++ b/index.html
@@ -511,6 +511,7 @@
                 borderColor: "#8b5cf6",
                 backgroundColor: "rgba(139, 92, 246, 0.1)",
                 tension: 0.4,
+                fill: true,
               },
               {
                 label: "Proyección Pico Demanda",
@@ -520,6 +521,7 @@
                 borderColor: "#f97316",
                 backgroundColor: "rgba(249, 115, 22, 0.1)",
                 tension: 0.4,
+                fill: true,
               },
             ],
           },
@@ -557,6 +559,7 @@
                 borderColor: "#3b82f6",
                 backgroundColor: "rgba(59, 130, 246, 0.1)",
                 yAxisID: "y",
+                fill: true,
               },
               {
                 label: "Demanda",
@@ -564,6 +567,7 @@
                 borderColor: "#f59e0b",
                 backgroundColor: "rgba(245, 158, 11, 0.1)",
                 yAxisID: "y",
+                fill: true,
               },
               {
                 label: "Déficit",
@@ -573,6 +577,7 @@
                 borderColor: "#ef4444",
                 backgroundColor: "rgba(239, 68, 68, 0.1)",
                 yAxisID: "y",
+                fill: true,
               },
               {
                 label: "Producción Solar",
@@ -582,6 +587,7 @@
                 borderColor: "#10b981",
                 backgroundColor: "rgba(16, 185, 129, 0.1)",
                 yAxisID: "y1",
+                fill: true,
               },
             ],
           },
